--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- DO NOT CHANGE THIS -->
+
+    <!-- IMPORTANT: relative path -->
     <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
